# DocWain

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Modelfile  README.md  README.ollama.md  api.py  conftest.py  docWain.py  docker-compose.yml  docwain-course.html  main.py  manage.py  pyproject.toml  qdrant_retriever.py  requirements-ci.txt  requirements.txt  test_document_extraction_live.py  vetting_config.json
api/: azureApi.py  cache_manager.py  config.py  dataHandler.py  documentVetting.py  docwain_api.py  dwNewRon_ollama.py  dwNewRon_openai.py  dw_chat.py  dw_document_extractor.py  dw_newron.py  enhanced_context_builder.py  enhanced_retrieval.py  smart_prompt_builder.py  teams_adapter.py
backend/: config_manager.py  database.py  embeddings.py  file_processor.py  main.py  storage.py
database/: duckdb_handler.py
docs/: UI_STREAMING_VISUALIZATION_CHANGES.md
docwain-gptoss-finetune-pipeline/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
docwain-gptoss-finetune-pipeline/data/: docwain_eval.jsonl  docwain_sft.jsonl
docwain-gptoss-finetune-pipeline/ollama/: Modelfile
docwain-gptoss-finetune-pipeline/scripts/: gen_dataset.sh  package_ollama.sh  run_eval.sh  train_lora.sh
docwain-gptoss-finetune-pipeline/src/docwain_ft/: __init__.py  config.py  dataset_gen.py  eval_harness.py  export_adapter.py  infer.py  ollama_packager.py  preprocess.py  prompts.py  redaction.py  train_lora.py  utils.py
docwain-gptoss-finetune-pipeline/tests/: conftest.py  test_determinism.py  test_no_leakage.py  test_no_not_mentioned.py  test_policy_grounding.py  test_schema_preservation.py
(+1245 files in other folders)
